--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="m-5 my-0">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,12 +8,12 @@
     rel="stylesheet">
 </head>
 <body>
-    <nav>
-        <div class="inline">Home</div>
-        <div class="inline">Experience</div>
-        <div class="inline">Projects</div>
-        <div class="inline">Skills</div>
-        <div class="inline">Contact me</div>
+    <nav class="h-14 flex">
+        <a class="inline m-4" href="#">Home</a>
+        <a class="inline m-4" href="#">Experience</a>
+        <a class="inline m-4" href="#">Projects</a>
+        <a class="inline m-4" href="#">Skills</a>
+        <a class="inline m-4" href="#">Contact me</a>
     </nav>
     <hr>
 </body>
