--- a/public/index.html
+++ b/public/index.html
@@ -85,13 +85,10 @@
         <div id="aboutMe">
           <h1>About Me</h1>
           <hr class="w-16 h-0.5 bg-black" />
-          <div>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae amet
-            voluptatibus soluta nisi sequi eos, repellendus recusandae ipsum
-            doloremque quidem repudiandae dolore omnis consectetur officia porro
-            dicta nemo autem asperiores!
+          <div class="my-2">
+            Enthusiastic Software Developer with a strong foundation in <b>C++, HTML, CSS, JavaScript, ReactJs, NodeJs and Express</b>. Passionate about creating efficient and user-friendly applications, I bring hands-on experience in full-stack development, collaborating with cross-functional teams to deliver high-quality solutions. Proven ability to adapt quickly to emerging technologies and a commitment to continuous learning. I thrive in dynamic environments, leveraging my problem-solving skills to contribute to innovative and impactful projects.
           </div>
-          <div class="grid grid-cols-2">
+          <div class="grid grid-cols-2 my-2">
             <div>
               <span class="font-bold">Name: </span>
               <span>Manoj Kumar</span>
