--- a/public/index.html
+++ b/public/index.html
@@ -321,10 +321,10 @@
           <hr class="w-16 h-0.5 bg-black" />
           <form action="https://api.web3forms.com/submit" method="POST" class="flex-wrap">
             <input type="hidden" name="access_key" value="5cbc25f6-aabf-411b-8642-c0d5f8796db4">
-            <input type="text" name="name" placeholder="Your Name" required class="border rounded-sm p-1">
-            <input type="text" name="email" placeholder="Your Email" required class="border">
-            <textarea name="message" placeholder="Your Message" required class="border"></textarea>
-            <button type="submit" class="border">Sumbit</button>
+            <input type="text" name="name" placeholder="Your Name" required class="border border-black rounded-lg p-1 block my-4 w-1/3">
+            <input type="text" name="email" placeholder="Your Email" required class="border border-black rounded-lg p-1 block my-4 w-1/3">
+            <textarea name="message" placeholder="Your Message" required class="border border-black rounded-lg p-1 block my-4 w-1/3"></textarea>
+            <button type="submit" class="border p-2 rounded-lg bg-green-400 hover:bg-green-500 shadow-lg shadow-green-500">Send Message</button>
           </form>
         </div>
       </div>
