--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Manoj Kumar</title>
-    <link rel="stylesheet" href="../src/assets/css/index.css">
+    <link href="../src/assets/css/index.css" />
     <link
       href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
       rel="stylesheet"
@@ -63,8 +63,12 @@
     </nav>
 
     <div class="flex my-4">
-      <div class="w-1/3 fixed h-full p-10 pr-0 bg-white rounded-lg">
-        <img src="../src/assets/photo.jpg" alt="" class="w-full h-5/6 rounded-lg" />
+      <div class="w-1/3 h-1/2 p-5 pt-1 bg-white rounded-lg">
+        <img
+          src="../src/assets/photo.jpg"
+          alt=""
+          class="w-full h-5/6 rounded-lg"
+        />
         <div class="m-2 w-full flex justify-center font-bold">Manoj Kumar</div>
         <div class="m-2 w-full flex justify-center">Programmer</div>
         <!-- <div class="mb-4" style="height: 22px;">
@@ -80,13 +84,21 @@
 
       <div
         id="content"
-        class="fixed right-0 w-2/3 p-10 overflow-y-scroll h-screen bg-white rounded-lg"
+        class="w-2/3 p-10 pt-1 overflow-y-scroll h-full bg-white rounded-lg"
       >
         <div id="aboutMe">
           <h1>About Me</h1>
           <hr class="w-16 h-0.5 bg-black" />
           <div class="my-2">
-            Enthusiastic Software Developer with a strong foundation in <b>C++, HTML, CSS, JavaScript, ReactJs, NodeJs and Express</b>. Passionate about creating efficient and user-friendly applications, I bring hands-on experience in full-stack development, collaborating with cross-functional teams to deliver high-quality solutions. Proven ability to adapt quickly to emerging technologies and a commitment to continuous learning. I thrive in dynamic environments, leveraging my problem-solving skills to contribute to innovative and impactful projects.
+            Enthusiastic Software Developer with a strong foundation in
+            <b>C++, HTML, CSS, JavaScript, ReactJs, NodeJs and Express</b>.
+            Passionate about creating efficient and user-friendly applications,
+            I bring hands-on experience in full-stack development, collaborating
+            with cross-functional teams to deliver high-quality solutions.
+            Proven ability to adapt quickly to emerging technologies and a
+            commitment to continuous learning. I thrive in dynamic environments,
+            leveraging my problem-solving skills to contribute to innovative and
+            impactful projects.
           </div>
           <div class="grid grid-cols-2 my-2">
             <div>
@@ -111,7 +123,7 @@
         <div id="skills" class="my-16">
           <h1>Skills</h1>
           <hr class="w-16 h-0.5 bg-black" />
-          <div class="flex flex-wrap justify-between"> 
+          <div class="flex flex-wrap justify-between">
             <div class="w-1/2 p-4 pl-0">
               <div class="skill">
                 <span>C++</span>
@@ -295,9 +307,11 @@
                 ● Created and hosted a dynamic analog clock project on GitHub,
                 demonstrating proficiency in HTML, CSS, and JavaScript while
                 showcasing the ability to develop interactive and real-time web
-                applications. 
-                ●<a href="https://clock-b9j0.onrender.com" class="text-rose-500">https://clock-b9j0.onrender.com</a> 
-
+                applications. ●<a
+                  href="https://clock-b9j0.onrender.com"
+                  class="text-rose-500"
+                  >https://clock-b9j0.onrender.com</a
+                >
               </div>
             </div>
             <div class="flex my-4">
@@ -319,12 +333,42 @@
         <div id="contact">
           <h1>Get in touch</h1>
           <hr class="w-16 h-0.5 bg-black" />
-          <form action="https://api.web3forms.com/submit" method="POST" class="flex-wrap">
-            <input type="hidden" name="access_key" value="5cbc25f6-aabf-411b-8642-c0d5f8796db4">
-            <input type="text" name="name" placeholder="Your Name" required class="border border-black rounded-lg p-1 block my-4 w-1/3">
-            <input type="text" name="email" placeholder="Your Email" required class="border border-black rounded-lg p-1 block my-4 w-1/3">
-            <textarea name="message" placeholder="Your Message" required class="border border-black rounded-lg p-1 block my-4 w-1/3"></textarea>
-            <button type="submit" class="border p-2 rounded-lg bg-green-400 hover:bg-green-500 shadow-lg shadow-green-500">Send Message</button>
+          <form
+            action="https://api.web3forms.com/submit"
+            method="POST"
+            class="flex-wrap"
+          >
+            <input
+              type="hidden"
+              name="access_key"
+              value="5cbc25f6-aabf-411b-8642-c0d5f8796db4"
+            />
+            <input
+              type="text"
+              name="name"
+              placeholder="Your Name"
+              required
+              class="border border-black rounded-lg p-2 block my-4 w-2/5"
+            />
+            <input
+              type="text"
+              name="email"
+              placeholder="Your Email"
+              required
+              class="border border-black rounded-lg p-2 block my-4 w-2/5"
+            />
+            <textarea
+              name="message"
+              placeholder="Your Message"
+              required
+              class="border border-black rounded-lg p-2 block my-4 w-2/5"
+            ></textarea>
+            <button
+              type="submit"
+              class="border p-2 rounded-lg bg-green-400 hover:bg-green-500 shadow-lg shadow-green-500"
+            >
+              Send Message
+            </button>
           </form>
         </div>
       </div>
