--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
     <div class="flex my-4">
       <div class="w-1/3 h-1/2 p-5 pt-1 bg-white rounded-lg">
         <img
-          src="../src/assets/photo.jpg"
+          src="./photo.jpg"
           alt=""
           class="w-full h-5/6 rounded-lg"
         />
