--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
     </nav>
 
     <div class="flex my-4">
-      <div class="w-1/3 h-1/2 p-5 pt-1 bg-white rounded-lg">
+      <div class="w-1/3 p-5 h-screen pt-1 bg-white rounded-lg fixed left-0">
         <img
           src="./photo.jpg"
           alt=""
@@ -84,7 +84,7 @@
 
       <div
         id="content"
-        class="w-2/3 p-10 pt-1 overflow-y-scroll h-full bg-white rounded-lg"
+        class="w-2/3 p-10 pt-1 overflow-y-scroll h-full bg-white rounded-lg fixed right-0"
       >
         <div id="aboutMe">
           <h1>About Me</h1>
