photo change and text cleaning

--- a/public/index.html
+++ b/public/index.html
@@ -22,13 +22,9 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
   </head>
-  <body class="bg-gray-100">
-    <nav
-      class="fixed right-0 w-1/10 h-screen h-full flex flex-col justify-center"
-    >
-      <ul
-        class="fixed right-0 h-1/2 flex flex-col justify-around my-auto py-auto"
-      >
+  <body class="bg-gray-100 relative z-0">
+    <nav class="absolute z-10 right-0 top-20 w-1/10 h-2/3">
+      <ul class="h-full flex flex-col justify-around my-10">
         <li class="rounded-full bg-green-500">
           <a class="inline m-4" href="#">
             <!-- <span>Home</span> -->
@@ -63,12 +59,8 @@
     </nav>
 
     <div class="flex my-4">
-      <div class="w-1/3 p-5 h-screen pt-1 bg-white rounded-lg fixed left-0">
-        <img
-          src="./photo.jpg"
-          alt=""
-          class="w-full h-5/6 rounded-lg"
-        />
+      <div class="w-1/3 p-5 h-screen pt-1 bg-gray-200 rounded-lg fixed left-0">
+        <img src="./photo.png" alt="" class="w-full h-4/5 rounded-lg" />
         <div class="m-2 w-full flex justify-center font-bold">Manoj Kumar</div>
         <div class="m-2 w-full flex justify-center">Programmer</div>
         <!-- <div class="mb-4" style="height: 22px;">
@@ -76,9 +68,17 @@
                 <div class="typed-text d-none">Web Designer, Web Developer, Front End Developer, Apps Designer, Apps Developer</div>
             </div> -->
         <div class="m-2 w-full flex justify-center">
-          <a href="" class="mx-1">Download CV</a>
-          <span>|</span>
-          <a href="" class="mx-1">Contact Me</a>
+          <a
+            href="https://drive.google.com/file/d/1NFPh3SL5rf6q4b1HTcXNaM2Ao9-ybhi1/view?usp=sharing"
+            class="p-2 bg-gray-400 rounded-lg hover:bg-green-300"
+            >Resume/CV</a
+          >
+          <span class="py-2">|</span>
+          <a
+            href="#contact"
+            class="p-2 bg-gray-400 rounded-lg hover:bg-green-300"
+            >Contact Me</a
+          >
         </div>
       </div>
 
@@ -200,16 +200,26 @@
                 <div class="font-bold">ICICI Bank</div>
                 <div>Digital Technology Manager</div>
                 <div>September 2022 - Present</div>
-                ● Managed and coordinated a 3rd party Development team, ensuring
-                timely delivery of high-quality solutions as part of the
-                Application Management Team at ICICI Bank. ● Acted as the
-                primary point of contact between ICICI Bank and the Development
-                team, facilitating effective communication. ● Provided guidance,
-                support, and ensured adherence to timelines and best practices.
-                ● Collaborated with cross-functional teams to gather and
-                translate business requirements effectively. ● Monitored project
-                progress, resolved challenges, and stayed updated with industry
-                trends to drive continuous improvement and innovation.
+                <div></div>
+                <div>
+                  - Implemented a comprehensive digital transformation strategy,
+                  resulting in a 20% increase in online sales within the first
+                  year.
+                </div>
+                <div>
+                  - Oversaw the development and launch of a new website, leading
+                  to a 30% increase in user engagement and retention.
+                </div>
+                <div>
+                  - Managed a team of 15 developers, designers, and analysts to
+                  successfully launch a new website, improving overall site
+                  performance and user experience.
+                </div>
+                <div>
+                  - Spearheaded the integration of new CRM software,
+                  streamlining customer communication processes and increasing
+                  customer satisfaction ratings by 15%.
+                </div>
               </div>
             </div>
             <div class="flex my-4">
@@ -220,18 +230,17 @@
                 </div>
                 <div>Full Stack Developer Trainee</div>
                 <div>August 2021 - October 2021</div>
-                ● Developed visually appealing and interactive front-end
-                components using HTML, CSS, JavaScript, Vue.js, and Vuex
-                framework. ● Implemented responsive and user-friendly
-                interfaces, enhancing the overall user experience. ● Utilized
-                Node.js and Express framework for efficient back-end
-                development, ensuring seamless data storage and retrieval with
-                MongoDB. ● Conducted rigorous testing and debugging, ensuring
-                high functionality and optimal performance of applications. ●
-                Effectively used git to maintain my work. ● Actively engaged in
-                continuous learning, staying updated with the latest
-                technologies and frameworks to enhance skills as a Full Stack
-                Developer.
+                <div>
+                  ● Designed and developed visually appealing and interactive
+                  front-end components using HTML, CSS, JavaScript, Vue.js, and
+                  Vuex framework.
+                </div>
+                <div>
+                  ● Utilized Node.js and Express framework for efficient
+                  back-end development, ensuring seamless data storage and
+                  retrieval with MongoDB.
+                </div>
+                <div>● Used git to maintain my work.</div>
               </div>
             </div>
             <div class="flex my-4">
@@ -240,17 +249,28 @@
                 <div class="font-bold">Sabajivala</div>
                 <div>Co-Founder</div>
                 <div>May 2021 - June 2021</div>
-                ● Co-founded and launched Sabajivala, an online platform for
-                direct ordering of fresh produce from farms. ● Implemented a
-                mobile app and also utilized WhatsApp and phone calls to
-                facilitate customer orders. ● Established strong relationships
-                with local farmers to ensure a consistent supply of fresh fruits
-                and vegetables. ● Efficiently managed logistics using electric
-                three-wheelers for timely and eco-friendly deliveries. ●
-                Conducted market research to optimize product offerings and
-                gained valuable experience in entrepreneurship, customer
-                service, and supply chain management within a start-up
-                environment.
+                <div>
+                  ● Co-founded and launched Sabajivala, an online platform for
+                  direct ordering of fresh produce from farms.
+                </div>
+                <div>
+                  ● Implemented a mobile app and also utilized WhatsApp and
+                  phone calls to facilitate customer orders.
+                </div>
+                <div>
+                  ● Established strong relationships with local farmers to
+                  ensure a consistent supply of fresh fruits and vegetables.
+                </div>
+                <div>
+                  ● Efficiently managed logistics using electric three-wheelers
+                  for timely and eco-friendly deliveries.
+                </div>
+                <div>
+                  ● Conducted market research to optimize product offerings and
+                  gained valuable experience in entrepreneurship, customer
+                  service, and supply chain management within a start-up
+                  environment.
+                </div>
               </div>
             </div>
           </div>
@@ -292,39 +312,53 @@
               <div>
                 <div class="font-bold">Parkings</div>
 
-                ● Developed "Parkings" web application for searching and
-                uploading parking spaces using HTML, CSS, JavaScript, Vue.js,
-                Express.js, and MongoDB. ● Implemented Key Features Including
-                Search functionality, user authentication, and authorization. ●
-                Worked in an Agile development environment, conducting testing,
-                debugging, and troubleshooting for optimal performance.
+                <div>
+                  ● Parkings is a web application for finding and listing
+                  parking spaces, offering a user-friendly platform for both
+                  seekers and property owners.
+                </div>
+                <div>
+                  ● Conceptualized and developed the 'Parkings" web app,
+                  implementing essential functions such as user authentication,
+                  search capability, and authorization features.
+                </div>
+                <div>
+                  ● Developed using technologies - HTML, CSS, JavaScript, VueJs,
+                  NodeJs, Express, MongoDb.
+                </div>
               </div>
             </div>
             <div class="flex my-4">
               <i class="fa fa-arrow-right m-2 ml-0"></i>
               <div>
                 <div class="font-bold">Clock</div>
-                ● Created and hosted a dynamic analog clock project on GitHub,
-                demonstrating proficiency in HTML, CSS, and JavaScript while
-                showcasing the ability to develop interactive and real-time web
-                applications. ●<a
-                  href="https://clock-b9j0.onrender.com"
-                  class="text-rose-500"
+                <a href="https://clock-b9j0.onrender.com" class="text-rose-500 hover:bg-gray-300 rounded-lg p-1"
                   >https://clock-b9j0.onrender.com</a
                 >
+                <div>● Clock is a website to check time in an analog clock</div>
+                <div>
+                  ● Developed and hosted a website which shows live time in
+                  analog format.
+                </div>
+                <div>
+                  ● Created using technologies like HTML, CSS, JavaScript.
+                </div>
               </div>
             </div>
             <div class="flex my-4">
               <i class="fa fa-arrow-right m-2 ml-0"></i>
               <div>
                 <div class="font-bold">Shopping</div>
-
-                ● Developed a "Shopping" web application for displaying items
-                for shopping, using HTML, CSS, and implementing a user-friendly
-                interface. ● Conducted thorough testing, debugging, and utilized
-                github to ensure seamless functionality, showcasing
-                problem-solving skills and attention to detail. ●
-                choudhary8.github.io
+                <a href="choudhary8.github.io" class="hover:bg-gray-300 rounded-lg p-1">choudhary8.github.io</a>
+                <div>
+                  ● Developed a "Shopping" web application for displaying items
+                  for shopping, using HTML, CSS, and implementing a
+                  user-friendly interface.
+                </div>
+                <div>
+                  ● Conducted thorough testing, debugging, and utilized github
+                  to ensure seamless functionality.
+                </div>
               </div>
             </div>
           </div>
