--- a/public/index.html
+++ b/public/index.html
@@ -70,13 +70,13 @@
         <div class="m-2 w-full flex justify-center">
           <a
             href="https://drive.google.com/file/d/1NFPh3SL5rf6q4b1HTcXNaM2Ao9-ybhi1/view?usp=sharing"
-            class="p-2 bg-gray-400 rounded-lg hover:bg-green-300"
+            class="p-2 bg-gray-300 rounded-lg hover:bg-gray-400"
             >Resume/CV</a
           >
           <span class="py-2">|</span>
           <a
             href="#contact"
-            class="p-2 bg-gray-400 rounded-lg hover:bg-green-300"
+            class="p-2 bg-gray-300 rounded-lg hover:bg-gray-400"
             >Contact Me</a
           >
         </div>
