--- a/public/index.html
+++ b/public/index.html
@@ -23,43 +23,43 @@
     />
   </head>
   <body class="bg-gray-100 relative z-0">
-    <nav class="absolute z-10 right-0 top-20 w-1/10 h-2/3">
+  <!--  <nav class="absolute z-10 right-0 top-20 w-1/10 h-2/3">
       <ul class="h-full flex flex-col justify-around my-10">
         <li class="rounded-full bg-green-500">
           <a class="inline m-4" href="#">
-            <!-- <span>Home</span> -->
+            <span>Home</span>
             <i class="fa fa-home"></i>
           </a>
         </li>
         <li>
           <a class="inline m-4" href="#">
             <i class="fa fa-user"></i>
-            <!-- Experience -->
+            Experience
           </a>
         </li>
         <li>
           <a class="inline m-4" href="#">
             <i class="fa fa-briefcase"></i>
-            <!-- Projects -->
+            Projects
           </a>
         </li>
         <li>
           <a class="inline m-4" href="#">
             <i class="fa fa-code"></i>
-            <!-- Skills -->
+            Skills
           </a>
         </li>
         <li>
           <a class="inline m-4" href="#">
             <i class="fa fa-envelope"></i>
-            <!-- Contact me -->
+            Contact me
           </a>
         </li>
       </ul>
-    </nav>
+    </nav> -->
 
     <div class="flex my-4">
-      <div class="w-1/3 p-5 h-screen pt-1 bg-gray-200 rounded-lg fixed left-0">
+      <div class="w-1/3 p- h-screen pt-1 bg-gray-200 rounded-lg fixed left-0">
         <img src="./photo.png" alt="" class="w-full h-4/5 rounded-lg" />
         <div class="m-2 w-full flex justify-center font-bold">Manoj Kumar</div>
         <div class="m-2 w-full flex justify-center">Programmer</div>
