photo change and nav hide

--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
     </nav> -->
 
     <div class="flex my-4">
-      <div class="w-1/3 p- h-screen pt-1 bg-gray-200 rounded-lg fixed left-0">
+      <div class="w-1/3 p-4 h-screen pt-1 bg-gray-200 rounded-lg fixed left-0">
         <img src="./photo.png" alt="" class="w-full h-4/5 rounded-lg" />
         <div class="m-2 w-full flex justify-center font-bold">Manoj Kumar</div>
         <div class="m-2 w-full flex justify-center">Programmer</div>
