--- a/public/index.html
+++ b/public/index.html
@@ -70,13 +70,13 @@
         <div class="m-2 w-full flex justify-center">
           <a
             href="https://drive.google.com/file/d/1NFPh3SL5rf6q4b1HTcXNaM2Ao9-ybhi1/view?usp=sharing"
-            class="p-2 bg-gray-300 rounded-lg hover:bg-gray-400"
+            class="p-2 bg-gray-300 rounded-lg shadow-lg hover:bg-gray-400"
             >Resume/CV</a
           >
           <span class="py-2">|</span>
           <a
             href="#contact"
-            class="p-2 bg-gray-300 rounded-lg hover:bg-gray-400"
+            class="p-2 bg-gray-300 shadow-lg rounded-lg hover:bg-gray-400"
             >Contact Me</a
           >
         </div>
@@ -200,25 +200,28 @@
                 <div class="font-bold">ICICI Bank</div>
                 <div>Digital Technology Manager</div>
                 <div>September 2022 - Present</div>
-                <div></div>
-                <div>
-                  - Implemented a comprehensive digital transformation strategy,
-                  resulting in a 20% increase in online sales within the first
-                  year.
+                <div class="flex">
+                  <div class="mr-2">●</div> 
+                  <div> Implemented a comprehensive digital transformation strategy,
+                    resulting in a 20% increase in online sales within the first
+                    year.</div>
                 </div>
-                <div>
-                  - Oversaw the development and launch of a new website, leading
-                  to a 30% increase in user engagement and retention.
+                <div class="flex">
+                  <div class="mr-2">●</div> 
+                  <div> Oversaw the development and launch of a new website, leading
+                    to a 30% increase in user engagement and retention.</div>
                 </div>
-                <div>
-                  - Managed a team of 15 developers, designers, and analysts to
-                  successfully launch a new website, improving overall site
-                  performance and user experience.
+                <div class="flex">
+                  <div class="mr-2">●</div> 
+                  <div> Managed a team of 15 developers, designers, and analysts to
+                    successfully launch a new website, improving overall site
+                    performance and user experience.</div>
                 </div>
-                <div>
-                  - Spearheaded the integration of new CRM software,
-                  streamlining customer communication processes and increasing
-                  customer satisfaction ratings by 15%.
+                <div class="flex">
+                  <div class="mr-2">●</div> 
+                  <div> Spearheaded the integration of new CRM software,
+                    streamlining customer communication processes and increasing
+                    customer satisfaction ratings by 15%.</div>
                 </div>
               </div>
             </div>
@@ -230,17 +233,22 @@
                 </div>
                 <div>Full Stack Developer Trainee</div>
                 <div>August 2021 - October 2021</div>
-                <div>
-                  ● Designed and developed visually appealing and interactive
-                  front-end components using HTML, CSS, JavaScript, Vue.js, and
-                  Vuex framework.
+                <div class="flex">
+                  <div class="mr-2">●</div> 
+                  <div> Designed and developed visually appealing and interactive
+                    front-end components using HTML, CSS, JavaScript, Vue.js, and
+                    Vuex framework.</div>
                 </div>
-                <div>
-                  ● Utilized Node.js and Express framework for efficient
-                  back-end development, ensuring seamless data storage and
-                  retrieval with MongoDB.
+                <div class="flex">
+                  <div class="mr-2">●</div> 
+                  <div> Utilized Node.js and Express framework for efficient
+                    back-end development, ensuring seamless data storage and
+                    retrieval with MongoDB.</div>
                 </div>
-                <div>● Used git to maintain my work.</div>
+                <div class="flex">
+                  <div class="mr-2">●</div> 
+                  <div> Used git to maintain my work.</div>
+                </div>
               </div>
             </div>
             <div class="flex my-4">
@@ -249,27 +257,32 @@
                 <div class="font-bold">Sabajivala</div>
                 <div>Co-Founder</div>
                 <div>May 2021 - June 2021</div>
-                <div>
-                  ● Co-founded and launched Sabajivala, an online platform for
-                  direct ordering of fresh produce from farms.
+                <div class="flex">
+                  <div class="mr-2">●</div> 
+                  <div> Co-founded and launched Sabajivala, an online platform for
+                    direct ordering of fresh produce from farms.</div>
                 </div>
-                <div>
-                  ● Implemented a mobile app and also utilized WhatsApp and
-                  phone calls to facilitate customer orders.
+                <div class="flex">
+                  <div class="mr-2">●</div> 
+                  <div> Implemented a mobile app and also utilized WhatsApp and
+                    phone calls to facilitate customer orders.</div>
                 </div>
-                <div>
-                  ● Established strong relationships with local farmers to
-                  ensure a consistent supply of fresh fruits and vegetables.
+                <div class="flex">
+                  <div class="mr-2">●</div> 
+                  <div>Established strong relationships with local farmers to
+                    ensure a consistent supply of fresh fruits and vegetables.</div>
                 </div>
-                <div>
-                  ● Efficiently managed logistics using electric three-wheelers
-                  for timely and eco-friendly deliveries.
+                <div class="flex">
+                  <div class="mr-2">●</div> 
+                  <div> Efficiently managed logistics using electric three-wheelers
+                    for timely and eco-friendly deliveries.</div>
                 </div>
-                <div>
-                  ● Conducted market research to optimize product offerings and
-                  gained valuable experience in entrepreneurship, customer
-                  service, and supply chain management within a start-up
-                  environment.
+                <div class="flex">
+                  <div class="mr-2">●</div> 
+                  <div> Conducted market research to optimize product offerings and
+                    gained valuable experience in entrepreneurship, customer
+                    service, and supply chain management within a start-up
+                    environment.</div>
                 </div>
               </div>
             </div>
@@ -283,7 +296,7 @@
             <div class="flex my-4">
               <i class="fa fa-arrow-right m-2 ml-0"></i>
               <div>
-                <div>Indian Institute of Technology (ISM), Dhanbad</div>
+                <strong>Indian Institute of Technology (ISM), Dhanbad</strong>
                 <div>
                   Bachelor of Technology in Computer Science and Engineering
                 </div>
@@ -311,20 +324,25 @@
               <i class="fa fa-arrow-right m-2 ml-0"></i>
               <div>
                 <div class="font-bold">Parkings</div>
-
-                <div>
-                  ● Parkings is a web application for finding and listing
-                  parking spaces, offering a user-friendly platform for both
-                  seekers and property owners.
+                <a href="https://github.com/choudhary8/Parkings" class="text-rose-500 hover:bg-gray-300 rounded-lg p-1"
+                  >GitHub</a
+                >
+                <div class="flex">
+                  <div class="mr-2">●</div> 
+                  <div> Parkings is a web application for finding and listing
+                    parking spaces, offering a user-friendly platform for both
+                    seekers and property owners.</div>
                 </div>
-                <div>
-                  ● Conceptualized and developed the 'Parkings" web app,
-                  implementing essential functions such as user authentication,
-                  search capability, and authorization features.
+                <div class="flex">
+                  <div class="mr-2">●</div> 
+                  <div> Conceptualized and developed the 'Parkings" web app,
+                    implementing essential functions such as user authentication,
+                    search capability, and authorization features.</div>
                 </div>
-                <div>
-                  ● Developed using technologies - HTML, CSS, JavaScript, VueJs,
-                  NodeJs, Express, MongoDb.
+                <div class="flex">
+                  <div class="mr-2">●</div> 
+                  <div> Developed using technologies - HTML, CSS, JavaScript, VueJs,
+                    NodeJs, Express, MongoDb.</div>
                 </div>
               </div>
             </div>
@@ -335,13 +353,18 @@
                 <a href="https://clock-b9j0.onrender.com" class="text-rose-500 hover:bg-gray-300 rounded-lg p-1"
                   >https://clock-b9j0.onrender.com</a
                 >
-                <div>● Clock is a website to check time in an analog clock</div>
-                <div>
-                  ● Developed and hosted a website which shows live time in
-                  analog format.
+                <div class="flex">
+                  <div class="mr-2">●</div> 
+                  <div> Clock is a website to check time in an analog clock</div>
                 </div>
-                <div>
-                  ● Created using technologies like HTML, CSS, JavaScript.
+                <div class="flex">
+                  <div class="mr-2">●</div> 
+                  <div> Developed and hosted a website which shows live time in
+                    analog format.</div>
+                </div>
+                <div class="flex">
+                  <div class="mr-2">●</div> 
+                  <div>Created using technologies like HTML, CSS, JavaScript.</div>
                 </div>
               </div>
             </div>
@@ -350,14 +373,16 @@
               <div>
                 <div class="font-bold">Shopping</div>
                 <a href="choudhary8.github.io" class="hover:bg-gray-300 rounded-lg p-1">choudhary8.github.io</a>
-                <div>
-                  ● Developed a "Shopping" web application for displaying items
-                  for shopping, using HTML, CSS, and implementing a
-                  user-friendly interface.
+                <div class="flex">
+                  <div class="mr-2">●</div> 
+                  <div> Developed a "Shopping" web application for displaying items
+                    for shopping, using HTML, CSS, and implementing a
+                    user-friendly interface.</div>
                 </div>
-                <div>
-                  ● Conducted thorough testing, debugging, and utilized github
-                  to ensure seamless functionality.
+                <div class="flex">
+                  <div class="mr-2">●</div> 
+                  <div> Conducted thorough testing, debugging, and utilized github
+                    to ensure seamless functionality.</div>
                 </div>
               </div>
             </div>
@@ -399,7 +424,7 @@
             ></textarea>
             <button
               type="submit"
-              class="border p-2 rounded-lg bg-green-400 hover:bg-green-500 shadow-lg shadow-green-500"
+              class="border p-2 rounded-lg bg-gray-300 hover:bg-gray-400 shadow-lg shadow-green-500"
             >
               Send Message
             </button>
