--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     />
   </head>
   <body class="bg-gray-100 relative z-0">
-  <!--  <nav class="absolute z-10 right-0 top-20 w-1/10 h-2/3">
+    <!--  <nav class="absolute z-10 right-0 top-20 w-1/10 h-2/3">
       <ul class="h-full flex flex-col justify-around my-10">
         <li class="rounded-full bg-green-500">
           <a class="inline m-4" href="#">
@@ -59,7 +59,9 @@
     </nav> -->
 
     <div class="flex my-4">
-      <div class="w-1/3 py-5 px-1 h-screen pt-1 bg-gray-200 rounded-lg fixed left-0">
+      <div
+        class="w-1/3 py-5 px-1 h-screen pt-1 bg-gray-200 rounded-lg fixed left-0"
+      >
         <img src="./photo.png" alt="" class="w-full h-4/5 rounded-lg" />
         <div class="m-2 w-full flex justify-center font-bold">Manoj Kumar</div>
         <div class="m-2 w-full flex justify-center">Programmer</div>
@@ -125,66 +127,66 @@
           <hr class="w-16 h-0.5 bg-black" />
           <div class="flex flex-wrap justify-between">
             <div class="w-1/2 p-4 pl-0">
-              <div class="skill">
+              <div class="skill flex justify-between">
                 <span>C++</span>
-                <span>95%</span>
-              </div>
-              <div class="h-1.5 bg-gray-200">
-                <div class="w-1/2 bg-black h-1.5"></div>
-              </div>
-            </div>
-            <div class="w-1/2 p-4 pl-0">
-              <div class="skill">
-                <span>HTML</span>
-                <span></span>
-              </div>
-              <div class="h-1.5 bg-gray-200">
-                <div class="w-1/2 bg-black h-1.5"></div>
-              </div>
-            </div>
-            <div class="w-1/2 p-4 pl-0">
-              <div class="skill">
-                <span>CSS</span>
                 <span>80%</span>
               </div>
-              <div class="h-1.5 bg-gray-200">
-                <div class="w-1/2 bg-black h-1.5"></div>
+              <div class="h-1.5 bg-gray-200 rounded-sm">
+                <div class="w-4/5 bg-black h-1.5 rounded-sm"></div>
               </div>
             </div>
             <div class="w-1/2 p-4 pl-0">
-              <div class="skill">
+              <div class="skill flex justify-between">
+                <span>HTML</span>
+                <span>80%</span>
+              </div>
+              <div class="h-1.5 bg-gray-200 rounded-sm">
+                <div class="w-4/5 bg-black h-1.5 rounded-sm"></div>
+              </div>
+            </div>
+            <div class="w-1/2 p-4 pl-0">
+              <div class="skill flex justify-between">
+                <span>CSS</span>
+                <span>60%</span>
+              </div>
+              <div class="h-1.5 bg-gray-200 rounded-sm">
+                <div class="w-3/5 bg-black h-1.5 rounded-sm"></div>
+              </div>
+            </div>
+            <div class="w-1/2 p-4 pl-0">
+              <div class="skill flex justify-between">
                 <span>JavaScript</span>
-                <span></span>
+                <span>50%</span>
               </div>
-              <div class="h-1.5 bg-gray-200">
-                <div class="w-1/2 bg-black h-1.5"></div>
+              <div class="h-1.5 bg-gray-200 rounded-sm">
+                <div class="w-1/2 bg-black h-1.5 rounded-sm"></div>
               </div>
             </div>
             <div class="w-1/2 p-4 pl-0">
-              <div class="skill">
+              <div class="skill flex justify-between">
                 <span>React Js</span>
-                <span></span>
+                <span>20%</span>
               </div>
-              <div class="h-1.5 bg-gray-200">
-                <div class="w-1/2 bg-black h-1.5"></div>
+              <div class="h-1.5 bg-gray-200 rounded-sm">
+                <div class="w-1/5 bg-black h-1.5 rounded-sm"></div>
               </div>
             </div>
             <div class="w-1/2 p-4 pl-0">
-              <div class="skill">
+              <div class="skill flex justify-between">
                 <span>Node Js</span>
-                <span></span>
+                <span>50%</span>
               </div>
-              <div class="h-1.5 bg-gray-200">
-                <div class="w-1/2 bg-black h-1.5"></div>
+              <div class="h-1.5 bg-gray-200 rounded-sm">
+                <div class="w-1/2 bg-black h-1.5 rounded-sm"></div>
               </div>
             </div>
             <div class="w-1/2 p-4 pl-0">
-              <div class="skill">
+              <div class="skill flex justify-between">
                 <span>Express</span>
-                <span></span>
+                <span>50%</span>
               </div>
-              <div class="h-1.5 bg-gray-200">
-                <div class="w-1/2 bg-black h-1.5"></div>
+              <div class="h-1.5 bg-gray-200 rounded-sm">
+                <div class="w-1/2 bg-black h-1.5 rounded-sm"></div>
               </div>
             </div>
           </div>
@@ -201,27 +203,35 @@
                 <div>Digital Technology Manager</div>
                 <div>September 2022 - Present</div>
                 <div class="flex">
-                  <div class="mr-2">●</div> 
-                  <div> Implemented a comprehensive digital transformation strategy,
+                  <div class="mr-2">●</div>
+                  <div>
+                    Implemented a comprehensive digital transformation strategy,
                     resulting in a 20% increase in online sales within the first
-                    year.</div>
+                    year.
+                  </div>
                 </div>
                 <div class="flex">
-                  <div class="mr-2">●</div> 
-                  <div> Oversaw the development and launch of a new website, leading
-                    to a 30% increase in user engagement and retention.</div>
+                  <div class="mr-2">●</div>
+                  <div>
+                    Oversaw the development and launch of a new website, leading
+                    to a 30% increase in user engagement and retention.
+                  </div>
                 </div>
                 <div class="flex">
-                  <div class="mr-2">●</div> 
-                  <div> Managed a team of 15 developers, designers, and analysts to
+                  <div class="mr-2">●</div>
+                  <div>
+                    Managed a team of 15 developers, designers, and analysts to
                     successfully launch a new website, improving overall site
-                    performance and user experience.</div>
+                    performance and user experience.
+                  </div>
                 </div>
                 <div class="flex">
-                  <div class="mr-2">●</div> 
-                  <div> Spearheaded the integration of new CRM software,
+                  <div class="mr-2">●</div>
+                  <div>
+                    Spearheaded the integration of new CRM software,
                     streamlining customer communication processes and increasing
-                    customer satisfaction ratings by 15%.</div>
+                    customer satisfaction ratings by 15%.
+                  </div>
                 </div>
               </div>
             </div>
@@ -234,20 +244,24 @@
                 <div>Full Stack Developer Trainee</div>
                 <div>August 2021 - October 2021</div>
                 <div class="flex">
-                  <div class="mr-2">●</div> 
-                  <div> Designed and developed visually appealing and interactive
-                    front-end components using HTML, CSS, JavaScript, Vue.js, and
-                    Vuex framework.</div>
+                  <div class="mr-2">●</div>
+                  <div>
+                    Designed and developed visually appealing and interactive
+                    front-end components using HTML, CSS, JavaScript, Vue.js,
+                    and Vuex framework.
+                  </div>
                 </div>
                 <div class="flex">
-                  <div class="mr-2">●</div> 
-                  <div> Utilized Node.js and Express framework for efficient
+                  <div class="mr-2">●</div>
+                  <div>
+                    Utilized Node.js and Express framework for efficient
                     back-end development, ensuring seamless data storage and
-                    retrieval with MongoDB.</div>
+                    retrieval with MongoDB.
+                  </div>
                 </div>
                 <div class="flex">
-                  <div class="mr-2">●</div> 
-                  <div> Used git to maintain my work.</div>
+                  <div class="mr-2">●</div>
+                  <div>Used git to maintain my work.</div>
                 </div>
               </div>
             </div>
@@ -258,31 +272,41 @@
                 <div>Co-Founder</div>
                 <div>May 2021 - June 2021</div>
                 <div class="flex">
-                  <div class="mr-2">●</div> 
-                  <div> Co-founded and launched Sabajivala, an online platform for
-                    direct ordering of fresh produce from farms.</div>
+                  <div class="mr-2">●</div>
+                  <div>
+                    Co-founded and launched Sabajivala, an online platform for
+                    direct ordering of fresh produce from farms.
+                  </div>
                 </div>
                 <div class="flex">
-                  <div class="mr-2">●</div> 
-                  <div> Implemented a mobile app and also utilized WhatsApp and
-                    phone calls to facilitate customer orders.</div>
+                  <div class="mr-2">●</div>
+                  <div>
+                    Implemented a mobile app and also utilized WhatsApp and
+                    phone calls to facilitate customer orders.
+                  </div>
                 </div>
                 <div class="flex">
-                  <div class="mr-2">●</div> 
-                  <div>Established strong relationships with local farmers to
-                    ensure a consistent supply of fresh fruits and vegetables.</div>
+                  <div class="mr-2">●</div>
+                  <div>
+                    Established strong relationships with local farmers to
+                    ensure a consistent supply of fresh fruits and vegetables.
+                  </div>
                 </div>
                 <div class="flex">
-                  <div class="mr-2">●</div> 
-                  <div> Efficiently managed logistics using electric three-wheelers
-                    for timely and eco-friendly deliveries.</div>
+                  <div class="mr-2">●</div>
+                  <div>
+                    Efficiently managed logistics using electric three-wheelers
+                    for timely and eco-friendly deliveries.
+                  </div>
                 </div>
                 <div class="flex">
-                  <div class="mr-2">●</div> 
-                  <div> Conducted market research to optimize product offerings and
+                  <div class="mr-2">●</div>
+                  <div>
+                    Conducted market research to optimize product offerings and
                     gained valuable experience in entrepreneurship, customer
                     service, and supply chain management within a start-up
-                    environment.</div>
+                    environment.
+                  </div>
                 </div>
               </div>
             </div>
@@ -324,25 +348,34 @@
               <i class="fa fa-arrow-right m-2 ml-0"></i>
               <div>
                 <div class="font-bold">Parkings</div>
-                <a href="https://github.com/choudhary8/Parkings" class="text-rose-500 hover:bg-gray-300 rounded-lg p-1"
+                <a
+                  href="https://github.com/choudhary8/Parkings"
+                  class="text-rose-500 hover:bg-gray-300 rounded-lg p-1"
                   >GitHub</a
                 >
                 <div class="flex">
-                  <div class="mr-2">●</div> 
-                  <div> Parkings is a web application for finding and listing
+                  <div class="mr-2">●</div>
+                  <div>
+                    Parkings is a web application for finding and listing
                     parking spaces, offering a user-friendly platform for both
-                    seekers and property owners.</div>
+                    seekers and property owners.
+                  </div>
                 </div>
                 <div class="flex">
-                  <div class="mr-2">●</div> 
-                  <div> Conceptualized and developed the 'Parkings" web app,
-                    implementing essential functions such as user authentication,
-                    search capability, and authorization features.</div>
+                  <div class="mr-2">●</div>
+                  <div>
+                    Conceptualized and developed the 'Parkings" web app,
+                    implementing essential functions such as user
+                    authentication, search capability, and authorization
+                    features.
+                  </div>
                 </div>
                 <div class="flex">
-                  <div class="mr-2">●</div> 
-                  <div> Developed using technologies - HTML, CSS, JavaScript, VueJs,
-                    NodeJs, Express, MongoDb.</div>
+                  <div class="mr-2">●</div>
+                  <div>
+                    Developed using technologies - HTML, CSS, JavaScript, VueJs,
+                    NodeJs, Express, MongoDb.
+                  </div>
                 </div>
               </div>
             </div>
@@ -350,21 +383,27 @@
               <i class="fa fa-arrow-right m-2 ml-0"></i>
               <div>
                 <div class="font-bold">Clock</div>
-                <a href="https://clock-b9j0.onrender.com" class="text-rose-500 hover:bg-gray-300 rounded-lg p-1"
+                <a
+                  href="https://clock-b9j0.onrender.com"
+                  class="text-rose-500 hover:bg-gray-300 rounded-lg p-1"
                   >https://clock-b9j0.onrender.com</a
                 >
                 <div class="flex">
-                  <div class="mr-2">●</div> 
-                  <div> Clock is a website to check time in an analog clock</div>
+                  <div class="mr-2">●</div>
+                  <div>Clock is a website to check time in an analog clock</div>
                 </div>
                 <div class="flex">
-                  <div class="mr-2">●</div> 
-                  <div> Developed and hosted a website which shows live time in
-                    analog format.</div>
+                  <div class="mr-2">●</div>
+                  <div>
+                    Developed and hosted a website which shows live time in
+                    analog format.
+                  </div>
                 </div>
                 <div class="flex">
-                  <div class="mr-2">●</div> 
-                  <div>Created using technologies like HTML, CSS, JavaScript.</div>
+                  <div class="mr-2">●</div>
+                  <div>
+                    Created using technologies like HTML, CSS, JavaScript.
+                  </div>
                 </div>
               </div>
             </div>
@@ -372,17 +411,25 @@
               <i class="fa fa-arrow-right m-2 ml-0"></i>
               <div>
                 <div class="font-bold">Shopping</div>
-                <a href="choudhary8.github.io" class="hover:bg-gray-300 rounded-lg p-1">choudhary8.github.io</a>
+                <a
+                  href="choudhary8.github.io"
+                  class="hover:bg-gray-300 rounded-lg p-1"
+                  >choudhary8.github.io</a
+                >
                 <div class="flex">
-                  <div class="mr-2">●</div> 
-                  <div> Developed a "Shopping" web application for displaying items
+                  <div class="mr-2">●</div>
+                  <div>
+                    Developed a "Shopping" web application for displaying items
                     for shopping, using HTML, CSS, and implementing a
-                    user-friendly interface.</div>
+                    user-friendly interface.
+                  </div>
                 </div>
                 <div class="flex">
-                  <div class="mr-2">●</div> 
-                  <div> Conducted thorough testing, debugging, and utilized github
-                    to ensure seamless functionality.</div>
+                  <div class="mr-2">●</div>
+                  <div>
+                    Conducted thorough testing, debugging, and utilized github
+                    to ensure seamless functionality.
+                  </div>
                 </div>
               </div>
             </div>
@@ -407,20 +454,20 @@
               name="name"
               placeholder="Your Name"
               required
-              class="border border-black rounded-lg p-2 block my-4 w-2/5"
+              class="border border-black rounded-lg p-2 block my-4 w-2/5 shadow-lg"
             />
             <input
               type="text"
               name="email"
               placeholder="Your Email"
               required
-              class="border border-black rounded-lg p-2 block my-4 w-2/5"
+              class="border border-black rounded-lg p-2 block my-4 w-2/5 shadow-lg"
             />
             <textarea
               name="message"
               placeholder="Your Message"
               required
-              class="border border-black rounded-lg p-2 block my-4 w-2/5"
+              class="border border-black rounded-lg p-2 block my-4 w-2/5 shadow-lg"
             ></textarea>
             <button
               type="submit"
