--- a/public/index.html
+++ b/public/index.html
@@ -57,10 +57,11 @@
         </li>
       </ul>
     </nav> -->
-
-    <div class="flex my-4">
+    <!-- class="w-1/3 py-5 px-1 h-screen pt-1 bg-gray-200 rounded-lg fixed left-0"
+    class="w-2/3 p-10 pt-1 overflow-y-scroll h-full bg-white rounded-lg fixed right-0" -->
+    <div class="my-4">
       <div
-        class="w-1/3 py-5 px-1 h-screen pt-1 bg-gray-200 rounded-lg fixed left-0"
+        class="w-full p-5 m-auto sm:w-1/3 sm:py-5 sm:px-1 sm:h-screen sm:pt-1 sm:bg-gray-200 sm:rounded-lg sm:fixed sm:left-0"
       >
         <img src="./photo.png" alt="" class="w-full h-4/5 rounded-lg" />
         <div class="m-2 w-full flex justify-center font-bold">Manoj Kumar</div>
@@ -86,7 +87,7 @@
 
       <div
         id="content"
-        class="w-2/3 p-10 pt-1 overflow-y-scroll h-full bg-white rounded-lg fixed right-0"
+        class="w-full p-5 m-auto sm:w-2/3 sm:p-10 sm:pt-1 sm:overflow-y-scroll sm:h-full sm:bg-white sm:rounded-lg sm:fixed sm:right-0"
       >
         <div id="aboutMe">
           <h1>About Me</h1>
