responsivness in aboutMe skills and form

--- a/public/index.html
+++ b/public/index.html
@@ -103,7 +103,7 @@
             leveraging my problem-solving skills to contribute to innovative and
             impactful projects.
           </div>
-          <div class="grid grid-cols-2 my-2">
+          <div class="grid sm:grid-cols-2 my-2">
             <div>
               <span class="font-bold">Name: </span>
               <span>Manoj Kumar</span>
@@ -116,7 +116,7 @@
               <span class="font-bold">Phone:</span>
               <span>9602964298</span>
             </div>
-            <div>
+            <div >
               <span class="font-bold">Email:</span>
               <span>manojbhichchhar8@gmail.com</span>
             </div>
@@ -127,7 +127,7 @@
           <h1>Skills</h1>
           <hr class="w-16 h-0.5 bg-black" />
           <div class="flex flex-wrap justify-between">
-            <div class="w-1/2 p-4 pl-0">
+            <div class="w-full sm:w-1/2 p-4 pl-0">
               <div class="skill flex justify-between">
                 <span>C++</span>
                 <span>80%</span>
@@ -136,7 +136,7 @@
                 <div class="w-4/5 bg-black h-1.5 rounded-sm"></div>
               </div>
             </div>
-            <div class="w-1/2 p-4 pl-0">
+            <div class="w-full sm:w-1/2 p-4 pl-0">
               <div class="skill flex justify-between">
                 <span>HTML</span>
                 <span>70%</span>
@@ -145,7 +145,7 @@
                 <div class="w-3/4 bg-black h-1.5 rounded-sm"></div>
               </div>
             </div>
-            <div class="w-1/2 p-4 pl-0">
+            <div class="w-full sm:w-1/2 p-4 pl-0">
               <div class="skill flex justify-between">
                 <span>CSS</span>
                 <span>60%</span>
@@ -154,7 +154,7 @@
                 <div class="w-3/5 bg-black h-1.5 rounded-sm"></div>
               </div>
             </div>
-            <div class="w-1/2 p-4 pl-0">
+            <div class="w-full sm:w-1/2 p-4 pl-0">
               <div class="skill flex justify-between">
                 <span>JavaScript</span>
                 <span>50%</span>
@@ -163,7 +163,7 @@
                 <div class="w-1/2 bg-black h-1.5 rounded-sm"></div>
               </div>
             </div>
-            <div class="w-1/2 p-4 pl-0">
+            <div class="w-full sm:w-1/2 p-4 pl-0">
               <div class="skill flex justify-between">
                 <span>React Js</span>
                 <span>20%</span>
@@ -172,7 +172,7 @@
                 <div class="w-1/5 bg-black h-1.5 rounded-sm"></div>
               </div>
             </div>
-            <div class="w-1/2 p-4 pl-0">
+            <div class="w-full sm:w-1/2 p-4 pl-0">
               <div class="skill flex justify-between">
                 <span>Node Js</span>
                 <span>50%</span>
@@ -181,7 +181,7 @@
                 <div class="w-1/2 bg-black h-1.5 rounded-sm"></div>
               </div>
             </div>
-            <div class="w-1/2 p-4 pl-0">
+            <div class="w-full sm:w-1/2 p-4 pl-0">
               <div class="skill flex justify-between">
                 <span>Express</span>
                 <span>50%</span>
@@ -455,20 +455,20 @@
               name="name"
               placeholder="Your Name"
               required
-              class="border border-black rounded-lg p-2 block my-4 w-2/5 shadow-lg"
+              class="border border-black rounded-lg p-2 block my-4 w-5/6 sm:w-2/5 shadow-lg"
             />
             <input
               type="text"
               name="email"
               placeholder="Your Email"
               required
-              class="border border-black rounded-lg p-2 block my-4 w-2/5 shadow-lg"
+              class="border border-black rounded-lg p-2 block my-4 w-5/6 sm:w-2/5 shadow-lg"
             />
             <textarea
               name="message"
               placeholder="Your Message"
               required
-              class="border border-black rounded-lg p-2 block my-4 w-2/5 shadow-lg"
+              class="border border-black rounded-lg p-2 block my-4 w-5/6 sm:w-2/5 shadow-lg"
             ></textarea>
             <button
               type="submit"
